# tree-sitter-luadoc

./: CHANGELOG.md  Cargo.toml  Package.swift  README.md  binding.gyp  grammar.js  package.json
.github/workflows/: ci.yml  release.yml
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
bindings/swift/: luadoc.h
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: annotations.txt
